Prevent overflow of titles.

--- a/src/main.css
+++ b/src/main.css
@@ -102,10 +102,14 @@ body {
   align-items: center;
 
   margin-bottom: 0.5em;
+
+  overflow: clip;
+  width: 100%;
 }
 
 .postTitleLine h1 {
   margin-right: 0.5em;
+  max-width: 100%;
 }
 
 .postTitleLine p {
